--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap4": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "firebase/php-jwt": "^6.4",
-        "symfony/var-dumper": "^4.4"
+        "firebase/php-jwt": "^6.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -31,7 +30,8 @@
         "symfony/browser-kit": ">=2.7 <=4.2.4",
         "codeception/module-filesystem": "^1.0.0",
         "codeception/module-yii2": "^1.0.0",
-        "codeception/module-asserts": "^1.0.0"
+        "codeception/module-asserts": "^1.0.0",
+        "symfony/var-dumper": "^4.4"
     },
     "config": {
         "process-timeout": 1800,
