--- a/docker/docker-alpine-nginx-php7.1/Dockerfile
+++ b/docker/docker-alpine-nginx-php7.1/Dockerfile
@@ -7,14 +7,15 @@ RUN apk update && apk upgrade
 RUN apk --update add --no-cache bash nginx supervisor vim curl
 
 # Install PHP 7.1 and some extensions
-RUN apk --update add --no-cache php7 php7-dom php7-fpm php7-curl php7-xml php7-mbstring php7-mcrypt php7-opcache php7-pdo php7-pdo_mysql \
-    php7-mysqli php7-tokenizer php7-fileinfo php7-openssl php7-json php7-session php7-gd php7-imagick php7-zip php7-phar
+RUN apk --update add --no-cache php7 php7-ctype php7-dom php7-fpm php7-curl php7-xml php7-mbstring php7-mcrypt \
+    php7-opcache php7-pdo php7-pdo_mysql php7-mysqli php7-tokenizer php7-fileinfo php7-openssl php7-json php7-session \
+    php7-gd php7-imagick php7-zip php7-phar
 
 # Clear cache
 RUN rm -Rf /var/cache/apk/*
 
 # Install composer v1
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer --version=1.10.27
 
 # Copy some configuration files
 COPY conf/nginx/nginx.conf /etc/nginx/nginx.conf
